# P4DDG

./: P4DDG.cabal  README.md
.github/workflows/: haskell.yml
app/: Main.hs  P4TransducerToDot.hs  P4TransducerToDotOld.hs  TransducerToDot.hs
src/: Grammar.hs  GrammarToTransducer.hs  P4Types.hs  Parser.hs
src/CodeGen/: AName.hs  Continuation.hs  Continuations.hs  OrderP4IRTransitions.hs  Unfold.hs
src/DDG/: FunctionSpecialization.hs  Grammar.hs  P4DDG.hs  Types.hs
src/Transducer/: Def.hs  GrammarToTransducer.hs
