cabal-version:      3.0
name:               P4DDG
version:            0.0.0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tommaso Pacciani
maintainer:         t.c.pacciani@uva.nl
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        DDG.Types
        DDG.P4DDG
        Parser
        -- DDG.Grammar


        P4Types

        Transducer.Def
        Transducer.GrammarToTransducer
        CodeGen.Continuations
        -- CodeGen.Continuations
        -- CodeGen.AName
        -- CodeGen.Continuation
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1
        , mtl
        , containers
        , fgl
        , megaparsec
        , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable P4DDG
    import:           warnings
    main-is:          Main.hs
    other-modules:
        TransducerToDot
        P4TransducerToDot
        -- CodeGen.Continuation
        -- PaperExampleGrammars
        -- P4TransducerToDot
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        graphviz
        , fgl
        , containers
        , text
        , P4DDG
        , megaparsec
        , mtl
        , P4DDG

    hs-source-dirs:   app, tests, src
    default-language: Haskell2010
